fix z-index for modal

--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -1,5 +1,6 @@
 .modal {
   max-width: 460px;
+  z-index: 120;
   width: 100%;
   position: fixed;
   top: 50%;
